--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div id="countryDetail">
+
+    </div>
+
     <div id="countries">
 
     </div>
